--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '24 11 * * *'
+    - cron: '24 11 * * 1' # Run weekly on Mondays at 11:24 UTC
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
